--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         #checkAnswerButton:hover {
             background-color: #00e6b3; /* 少し濃いシアン */
             transform: scale(1.05); /* ホバー時にスケールアップ */
- Victim: 0 0 20px rgba(0, 255, 204, 1); /* ホバー時の影 */
+            box-shadow: 0 0 20px rgba(0, 255, 204, 1); /* ホバー時の影 */
         }
 
         .result-message, .wrong-message {
@@ -432,8 +432,5 @@
         updateEventMessage();
         updateQuizQuestion();
     </script>
-    <script src="https://apis.google.com/js/platform.js"></script>
-
-    <div class="g-ytsubscribe" data-channelid="UC60YjVR0cuPDOXFiBLj5T6Q" data-layout="full" data-theme="dark" data-count="default"></div>
 </body>
 </html>
