--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <meta name="google-site-verification" content="8WFk8C1JtaJFrKZgr6HkXhRAQE_pDTooR4MwgbLIDG0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoogle</title>
